--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,16 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-      - run: npx yarn
-      - run: npx yarn build
+          node-version: '18.x'
+      - run: npx pnpm i
+      - run: npx pnpm lint
+      - run: npx pnpm build
+      - run: node dist/main.js
       - run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          export COMMIT_ID=$(git log --format="%H" -n 1)
           git add .
-          git commit -m "build: \`${COMMIT_ID}\` commit"
+          git commit -m "build: \`$(date)\` commit"
           git remote set-url origin --push https://github-actions[bot]:${GITHUB_TOKEN}@github.com/pmh-only/pmh-only.git
           git push origin master
         env:
