--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "nodemon": "^2.0.20",
     "pnpm": "^7.21.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "undici": "^5.14.0"
   }
 }
