--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
       - run: npx pnpm i
       - run: npx pnpm build
       - run: npx pnpm start
+        env:
+          PF_GITHUB_TOKEN: ${{ secrets.PF_GITHUB_TOKEN }}
       - run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
